--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
+    "@tabler/icons-react": "^3.11.0",
     "@types/three": "^0.167.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.21",
